--- a/index.html
+++ b/index.html
@@ -13,12 +13,45 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Responsive christmas website - Bedimcode</title>
+      <title>Christmas Themed Website</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
-         
+         <nav class="nav container">
+            <a href="#" class="href nav__logo">Christmas</a>
+
+            <div class="nav__menu" id="nav-menu">
+               <ul class="nav__list">
+                  <li>
+                     <a href="#" class="href nav__link">Home</a>
+                  </li>
+                  <li>
+                     <a href="#" class="href nav__link">About</a>
+                  </li>
+                  <li>
+                     <a href="#" class="href nav__link">Gifts</a>
+                  </li>
+                  <li>
+                     <a href="#" class="href nav__link">Share</a>
+                  </li>
+                  <li>
+                     <a href="#" class="href nav__link">Contact</a>
+                  </li>
+               </ul>
+
+               <!-- Close button -->
+                <div class="nav__close" id="nav-close">
+                  <i class="ri-close-large-line"></i>
+                </div>
+            </div>
+
+            <!-- Toggle button -->
+            <div class="nav__toggle" id="nav-toggle">
+               <i class="ri-apps-2-line"></i>
+            </div>
+
+         </nav>
       </header>
 
       <!--==================== MAIN ====================-->
