--- a/index.html
+++ b/index.html
@@ -58,6 +58,35 @@
       <main class="main">
          <!--==================== HOME ====================-->
          <section class="home">
+            <div class="home__container container">
+               <img src="assets/img/img-bg.svg" alt="image" class="home__bg">
+
+               <img src="assets/img/cloud-1.svg" alt="image" class="home__cloud-1">
+               <img src="assets/img/cloud-2.svg" alt="image" class="home__cloud-2">
+
+               <img src="assests/img/sled.svg" alt="image" class="home__sled">
+
+               <div class="home__images">
+                  <img src="assets/img/img-1.svg" alt="image" class="home__img-1">
+                  <img src="assets/img/img-2.svg" alt="image" class="home__img-2">
+                  <img src="assets/img/img-3.svg" alt="image" class="home__img-3">
+                  <img src="assets/img/img-4.svg" alt="image" class="home__img-4">
+                  <img src="assets/img/img-5.svg" alt="image" class="home__img-5">
+                  <img src="assets/img/img-6.svg" alt="image" class="home__img-6">
+                  <img src="assets/img/img-7.svg" alt="image" class="home__img-7">
+                  <img src="assets/img/img-8.svg" alt="image" class="home__img-8">
+                  <img src="assets/img/img-9.svg" alt="image" class="home__img-9">
+                  <img src="assets/img/img-10.svg" alt="image" class="home__img-10">
+                  <img src="assets/img/img-11.svg" alt="image" class="home__img-11">
+                  <img src="assets/img/img-12.svg" alt="image" class="home__img-12">
+                  <img src="assets/img/img-13.svg" alt="image" class="home__img-13">
+                  <img src="assets/img/img-14.svg" alt="image" class="home__img-14">
+                  <img src="assets/img/img-15.svg" alt="image" class="home__img-15">
+                  <img src="assets/img/img-16.svg" alt="image" class="home__img-16">
+               </div>
+
+               <h1 class="home__title">Merry <br> Christmas</h1>
+            </div>
             
          </section>
       </main>
