--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                <img src="assets/img/cloud-1.svg" alt="image" class="home__cloud-1">
                <img src="assets/img/cloud-2.svg" alt="image" class="home__cloud-2">
 
-               <img src="assests/img/sled.svg" alt="image" class="home__sled">
+               <img src="assets/img/sled.svg" alt="image" class="home__sled">
 
                <div class="home__images">
                   <img src="assets/img/img-1.svg" alt="image" class="home__img-1">
