--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </main>
       
       <!--=============== GSAP JS ===============-->
-      <script src=""></script>
+      <script src="assets/js/gsap.min.js"></script>
 
       <!--=============== SNOW JS ===============-->
       
