--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <script src="assets/js/gsap.min.js"></script>
 
       <!--=============== SNOW JS ===============-->
-      
+      <script src="https://app.embed.im/snow.js" defer></script>
 
       <!--=============== MAIN JS ===============-->
       <script src="assets/js/main.js"></script>
